@startuml

set separator none
package user.controller {
    class UserController <<Function Group>> {
        + {static} getProfile(req: Request, res: Response): RequestHandler
        + {static} getAllUsers(req: Request, res: Response): RequestHandler
        + {static} getUserByID(req: Request, res: Response): RequestHandler
        + {static} getPlaylists(req: Request, res: Response): RequestHandler
        + {static} getListenHistory(req: Request, res: Response): RequestHandler
        + {static} getFollowedArtists(req: Request, res: Response): RequestHandler
        + {static} updateProfile(req: Request, res: Response): RequestHandler
        + {static} upsertListenHistory(req: Request, res: Response): RequestHandler
        + {static} followArtist(req: Request, res: Response): RequestHandler
        + {static} unfollowArtist(req: Request, res: Response): RequestHandler
    }
}

package services {
    class Redis <<Singleton>> {
        - client: UpstashRedis

        + set<T>(key: string, data: T, options?: SetCommandOptions): Promise<"OK" | T | null>
        + get<T>(key: string): Promise<T | null>
        + del(keys: string[]): Promise<void>
    }
    class Cloudinary <<Singleton>> {
        + upload(file: Express.Multer.File,folder: string,id: string): Promise<string>
        + delete(folder: string, fileName: string): Promise<void>
    }
}

UserController ..> Redis
UserController ..> Cloudinary

@enduml